Id problem resolved

--- a/src/main/resources/templates/clubs/create.html
+++ b/src/main/resources/templates/clubs/create.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
+<form method="post" action="/clubs/create">
 
+    <div class="container">
+
+        <center><h2>Create club</h2></center>
+        <label>Email</label>
+        <input type="text" id="name" placeholder="name" name="name" required>
+        <label>Username</label>
+        <input type="text" id="description" placeholder="description" name="description" required>
+        <button type="submit">Create club</button>
+    </div>
+</form>
 </body>
 </html>
