--- a/src/main/resources/templates/navbar/show.html
+++ b/src/main/resources/templates/navbar/show.html
@@ -13,19 +13,19 @@
                     <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
                     <ul class="nav-list">
                         <li>
-                            <a href="#!">Clubs</a>
+                            <a href="/clubs">Clubs</a>
                         </li>
                         <li>
-                            <a href="#!">Events</a>
+                            <a href="/events">Events</a>
                         </li>
                         <li>
-                            <a href="#!">Schedule</a>
+                            <a href="/schedule">Schedule</a>
                         </li>
                         <li>
                             <a href="#!">Profile</a>
                         </li>
                         <li>
-                            <a id="signout" href="#!">Sign Out</a>
+                            <a id="signout" href="/logout">Sign Out</a>
                         </li>
                     </ul>
                 </nav>
