--- a/src/main/resources/templates/clubs/list.html
+++ b/src/main/resources/templates/clubs/list.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-<section class="navigation">
+
+<!--<section class="navigation">
     <div class="nav-container">
         <div class="brand">
             <a href="#!">Sigma</a>
@@ -51,7 +52,9 @@
             </ul>
         </nav>
     </div>
-</section>
+</section>-->
+
+<div th:replace="navbar/show :: navbar" ></div>
 
 <div class="square"></div>
 <div class="circle1"></div>
@@ -63,24 +66,28 @@
         <li class="oneClassElement">
             <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
             <a class="clubName" href="" th:text="${club.name}"></a>
+            <tr th:text="${club.id}"></tr>
             <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
                 <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
         </li>
         <li class="oneClassElement">
             <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
             <a class="clubName" href="" th:text="${club.name}"></a>
+            <tr th:text="${club.id}"></tr>
             <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
                 <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
         </li>
         <li class="oneClassElement">
             <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
             <a class="clubName" href="" th:text="${club.name}"></a>
+            <tr th:text="${club.id}"></tr>
             <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
                 <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
         </li>
         <li class="oneClassElement">
             <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
             <a class="clubName" href="" th:text="${club.name}"></a>
+            <tr th:text="${club.id}"></tr>
             <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
                 <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
         </li>
