--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -42,7 +42,7 @@
 
 <div id="description" th:text="${club.description}"></div>
 
-<p class = "activemembernum" th:text="${club.activeMembers.length} + 'Active Members' "></p>
+<!--<p class = "activemembernum" th:text="${club.activeMembers.length} + 'Active Members' "></p>-->
 
 <section class="navigation">
     <div class="nav-container">
@@ -72,7 +72,7 @@
     </div>
 </section>
 
-<div id="upcomingevents">
+<!--<div id="upcomingevents">
     <p class="eventstitle">Upcoming events:</p>
     <ul class="eventslist">
         <li class="event1" th="event : ${futureEvents.[0]}">
@@ -142,7 +142,7 @@
         <div class="rec2"></div>
         <div class="rec3"></div>
     </div>
-</button>
+</button>-->
 
 </body>
 </html>
