--- a/src/main/resources/templates/events/show.html
+++ b/src/main/resources/templates/events/show.html
@@ -16,9 +16,9 @@
       </div>
       <div class="column">
         <p th:text="${event.name}"></p>
-        <p th:text="${'Description:' + event.description}"></p>
-        <!-- <p th:text="${'Date:' + event.date}"></p> -->
-        <p th:text="${'Location:' + event.location}"></p>
+        <p th:text="${'Description: ' + event.description}"></p>
+        <p th:text="${'Date: ' + date}"></p>
+        <p th:text="${'Location: ' + event.location}"></p>
         <button> Register</button>
       </div>
     </div>
