--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -103,6 +103,16 @@
 			<input type="text" id="username" placeholder="username" name="username" required>
             <label>Password</label>   
             <input type="password" id="password" placeholder="password" name="password" required>
+			<label>Department</label>
+			<input type="text" id="department" placeholder="department" name="department" required>
+			<label>Date Of Birth</label>
+			<input type="date" id="dateOfBirth" placeholder="dateOfBirth" name="dateOfBirth" required>
+			<label>Start Of Studies</label>
+			<input type="text" id="startOfStudies" placeholder="startOfStudies" name="startOfStudies" required>
+			<label>Instagram Username</label>
+			<input type="text" id="instagramUsername" placeholder="instagramUsername" name="instagramUsername" required>
+			<label>LinkedIn Username</label>
+			<input type="text" id="linkedinUsername" placeholder="linkedinUsername" name="linkedinUsername" required>
             <button type="submit">Register</button>    
         </div> 
 	</form>
