--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <title>Profile Page</title>
     <link rel="stylesheet" href="../../static/css/userProfilePage.css">
@@ -14,52 +14,27 @@
 </head>
 <body>
 
-<section class="navigation">
-    <div class="nav-container">
-        <div class="brand">
-            <a href="#!">Sigma</a>
-        </div>
-        <nav>
-            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
-            <ul class="nav-list">
-                <li>
-                    <a href="#!">Clubs</a>
-                </li>
-                <li>
-                    <a href="#!">Events</a>
-                </li>
-                <li>
-                    <a href="#!">Schedule</a>
-                </li>
-                <li>
-                    <a href="#!" style="background: #3C6D79">Profile</a>
-                </li>
-                <li>
-                    <a id="signout" href="#!">Sign Out</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</section>
+<div th:replace="navbar/show :: navbar" ></div>
+
 <div id="gradient"></div>
 
 <div class="top">
     <img id="profilephoto" src="" alt="profile photo"/>
-    <p id="userName">Username</p>
+    <p th:text="${user.username}"></p>
 </div>
 
 
 <div class="middle">
     <ul class="info">
-        <li>Department: X </li>
-        <li>Date of birth: dd.mm.yyyy </li>
-        <li>Start of studies: 20xx</li>
+        <li>Department: <p th:text="${user.department}"></p> </li>
+        <li>Date of birth: <p th:text="${user.dateOfBirth}"></p> </li>
+        <li>Start of studies: <p th:text="${user.startOfStudies}"></p></li>
         <li>Participated in x events</li>
     </ul>
     <ul class="social">
-        <li>firstname.lastname@ug.bilkent.edutr</li>
-        <li>instagramusername</li>
-        <li>linkedinusername</li>
+        <li th:text="${user.email}"></li>
+        <li th:text="${user.instagramUsername}"> </li>
+        <li th:text="${user.linkedinUsername}"></li>
     </ul>
 </div>
 
