--- a/src/main/resources/templates/clubs/list.html
+++ b/src/main/resources/templates/clubs/list.html
@@ -25,43 +25,14 @@
             <li class="oneClassElement">
                 <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
                 <a class="clubName" href="" th:text="${club.name}"></a>
-                <tr th:text="${club.id}"></tr>
-                <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
-                    <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+                <div class="buttonsDiv">
+                    <button class= "followButton" type="submit">follow</button>
+                    <form method="get" th:action="@{/clubs/__${club.id}__}">
+                        <button class= "goToProfilePageButton" type="submit">go to profile</button>
+                    </form>
+                </div>
             </li>
-            <li class="oneClassElement">
-                <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
-                <a class="clubName" href="" th:text="${club.name}"></a>
-                <tr th:text="${club.id}"></tr>
-                <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
-                    <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
-            </li>
-            <li class="oneClassElement">
-                <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
-                <a class="clubName" href="" th:text="${club.name}"></a>
-                <tr th:text="${club.id}"></tr>
-                <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
-                    <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
-            </li>
-            <li class="oneClassElement">
-                <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
-                <a class="clubName" href="" th:text="${club.name}"></a>
-                <tr th:text="${club.id}"></tr>
-                <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
-                    <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
-            </li>
-            <li class="oneClassElement">
-                <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
-                <a class="clubName" href="" th:text="${club.name}"></a>
-                <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
-                    <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
-            </li>
-            <li class="oneClassElement">
-                <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
-                <a class="clubName" href="" th:text="${club.name}"></a>
-                <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
-                    <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
-            </li>
+            <p th:text="${club.id}"></p>
         </ul>
     </div>
 
