--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/%22%3E">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <title>Club Profile Page</title>
     <link rel="stylesheet" href="../../static/css/clubProfilePageCSS.css" />
@@ -42,37 +42,14 @@
 
 <div id="description" th:text="${club.description}"></div>
 
-<!--<p class = "activemembernum" th:text="${club.activeMembers.length} + 'Active Members' "></p>-->
+<!--
+<p class = "activemembernum" th:text="${club.activeMembers.length} + 'Active Members' "></p>
+-->
 
-<section class="navigation">
-    <div class="nav-container">
-        <div class="brand">
-            <a href="#!">Sigma</a>
-        </div>
-        <nav>
-            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
-            <ul class="nav-list">
-                <li>
-                    <a href="#!">Clubs</a>
-                </li>
-                <li>
-                    <a href="#!">Events</a>
-                </li>
-                <li>
-                    <a href="#!">Schedule</a>
-                </li>
-                <li>
-                    <a href="#!">Profile</a>
-                </li>
-                <li>
-                    <a id="signout" href="#!">Sign Out</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</section>
+<div th:replace="navbar/show :: navbar" ></div>
 
-<!--<div id="upcomingevents">
+<!--
+<div id="upcomingevents">
     <p class="eventstitle">Upcoming events:</p>
     <ul class="eventslist">
         <li class="event1" th="event : ${futureEvents.[0]}">
@@ -114,17 +91,18 @@
         </li>
     </ul>
 </div>
+-->
 
-<p class="activememberlisttitle">Active Members:</p>
+<!--<p class="activememberlisttitle">Active Members:</p>
 <div class="maincontainer">
     <ul id="activemembers" th:each="user : ${activeMembers}">
         <li>
             <a class="username" href="" th:text="${user.name}"></a>
         </li>
     </ul>
-</div>
+</div>-->
 
-<p class="requestlisttitle">Active Membership Requests:</p>
+<!--<p class="requestlisttitle">Active Membership Requests:</p>
 <div class="secondcontainer" th:each="user : ${activeMembershipRequests}">
     <ul id="requests">
         <li>
@@ -133,7 +111,7 @@
             <button class= "rejectbutton" type="submit">✖</button>
         </li>
     </ul>
-</div>
+</div>-->
 
 <button>
     <div class="pencil">
@@ -142,7 +120,7 @@
         <div class="rec2"></div>
         <div class="rec3"></div>
     </div>
-</button>-->
+</button>
 
 </body>
 </html>
