added event model properties
-Changes in event controller and front end
-reload  database required

--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -99,23 +99,19 @@
                 </select>
             </div>
         -->
-        <!--
             <div class="box">
                 <span class="label">Max Participants </span>
-                <span class="ib"> <input type="number" class="formInput" name="maxparticipantsbox" id="maxParticipants"/></span>
+                <span class="ib"> <input type="number" class="formInput" name="maxParticipants" id="maxParticipants"/></span>
             </div>
-            -->
             <div class="box">
                 <span class="label">Event Date</span>
-                <span class="ib">  <input type="date" class="formInput" name="eventdatemin" id="eventdatemin"/></span> -
-                <span class="ib">  <input type="date" class="formInput" name="eventdatemax" id="eventdatemax"/></span>
+                <span class="ib">  <input type="date" class="formInput" name="startDate" id="startDate"/></span> -
+                <span class="ib">  <input type="date" class="formInput" name="endDate" id="endDate"/></span>
             </div>
-        <!--
             <div class="box">
                 <span class="label">Application Deadline</span>
-                <span class="ib"><input type="date" class="formInput" name="appdeadlinebox" id="appDeadline"/></span>
+                <span class="ib"><input type="date" class="formInput" name="applicationDeadline" id="applicationDeadline"/></span>
             </div>
-            -->
             <div class="box">
                 <span class="label">Description </span>
                 <span class="ib">  <textarea type="text" id="description" name="description" rows="10" cols="75"></textarea></span>
