--- a/src/main/resources/templates/events/list.html
+++ b/src/main/resources/templates/events/list.html
@@ -5,121 +5,98 @@
   <link th:href="@{/css/eventsList.css}" rel="stylesheet" />
 </head>
 <body>
+  <div th:replace="navbar/show :: navbar" ></div>
 
-<div th:replace="navbar/show :: navbar" ></div>
+  <tr th:each="event: ${events}">
+    <a th:href="@{/events/{id}(id=${event.id})}" th:text="${event.name}">bruh</a>
+  </tr>
 
-<tr th:each="event: ${events}">
-  <a th:href="@{/events/{id}(id=${event.id})}" th:text="${event.name}">bruh</a>
-</tr>
+  <div class="filters">
+    <input type="text" id="searchForEventInput" onkeyup="search()" placeholder="Search for an event..." >
+    <button id="pastEvents" onclick="openPastEvents()">Past Events</button>
+      <button id="upcomingEvents" onclick="openUpcomingEvents()">Upcoming Events</button>
 
-<ul>
-  <input type="text" id="myInput" onkeyup="search()" placeholder="Search for an event.." >
+    <div class="dropdown">
+      <button onclick="dropdown()" class="dropbtn">Choose a filter</button>
+      <div id="myDropdown" class="dropdown-content">
+        <button style="background-color: darkred" onclick="dropdown()" class="dropbtn">Tags</button>
+        <div id="myDropdown1" class="dropdown-content1">
+          <a href="#home">Science</a>
+          <a href="#about">Engineering</a>
+          <a href="#contact">Astronomy</a>
+        </div>
 
-  <div class="dropdown">
-    <button onclick="dropdown()" class="dropbtn">Choose a Filter</button>
-    <div id="myDropdown" class="dropdown-content">
-      <button style="background-color: darkred" onclick="dropdown()" class="dropbtn">Tags</button>
-      <div id="myDropdown1" class="dropdown-content1">
-        <a href="#home">Science</a>
-        <a href="#about">Engineering</a>
-        <a href="#contact">Astronomy</a>
+        <button style="background-color: darkred" onclick="dropdown()" class="dropbtn">Clubs</button>
+        <div id="myDropdown2" class="dropdown-content2">
+          <a href="#home">OR</a>
+          <a href="#about">YES</a>
+          <a href="#contact">ADT</a>
+        </div>
       </div>
+    </div>
 
-      <button style="background-color: darkred" onclick="dropdown()" class="dropbtn">Clubs</button>
-      <div id="myDropdown2" class="dropdown-content2">
-        <a href="#home">OR</a>
-        <a href="#about">YES</a>
-        <a href="#contact">ADT</a>
-      </div>
+  </div>
+
+  <div class="middle">
+    <div id="events">
+      <table>
+        <tr>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+          <td>
+            <p class="clubName">Club Name</p>
+            <img>
+            <p class="eventName">X Event</p>
+            <div class="eventInfo"><p class="eventInfoElement">tomorrow</p><p class="eventInfoElement">Location</p><p class="eventInfoElement">Price</p></div>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 
-</ul>
-
-
-<div id="events">
-  <ul>
-    <li>
-      <p><center>Osman</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event A</a></center></p>
-      <p><center>yesterday   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event B</a></center></p>
-      <p><center>tomorrow   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Osman</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Star Wars Marathon</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-  </ul>
-  <ul>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Yeah</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>KD > Lebron</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Name</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Name</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-
-  </ul>
-  <ul>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Name</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Name</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Name</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-    <li>
-      <p><center>Club Name</center></p>
-      <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="alternatetext" height="200">
-      <p><center><a>Event Name</a></center></p>
-      <p><center>Date   Location    Price</center></p>
-    </li>
-  </ul>
-</div>
-
-<script type="text/javascript" th:src="@{/js/eventsList.js}"></script>
+  <script type="text/javascript" th:src="@{/js/eventsList.js}"></script>
 
 </body>
 
