--- a/src/main/resources/static/css/userProfilePage.css
+++ b/src/main/resources/static/css/userProfilePage.css
@@ -146,7 +146,7 @@ nav ul li ul li a {
 /* user profile page -----------------------------------------------*/
 #gradient{
     position: absolute;
-    width: 1519px;
+    width: 100%;
     height: 148px;
     left: 0;
     top: 70px;
@@ -328,7 +328,7 @@ button:hover {
 
 .pencil{
     position: absolute;
-    margin-left: 1440px;
+    margin-left: 94%;
     top: 90px;
     opacity: 0.8;
 }
