--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -29,7 +29,7 @@
         <li th:text="'Department: ' + ${user.department}"></li>
         <li th:text="'Date of Birth: ' + ${user.dateOfBirth}"></li>
         <li th:text="'Start of studies: ' + ${user.startOfStudies}"></li>
-        <li>Participated in x events</li>
+        <li th:text="'Participated in ' + ${#lists.size(attendedevents)} + ' events'"></li>
         <li th:text="'About me: ' + ${user.description}"></li>
     </ul>
     <ul class="social">
