create event page css file link edited

--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Event Page</title>
-    <link href="../../static/css/createEventPage.css" rel="stylesheet" />
+    <link th:href="@{/css/createEventPage.css}" rel="stylesheet" />
 
 </head>
 <body style="font-family: Arial">
