CLub profile page
-Connected most of front end
-Controller is updated for needed data
-requests are absent

--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -2,31 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <title>Club Profile Page</title>
-    <link rel="stylesheet" href="../../static/css/clubProfilePageCSS.css" />
-    <style>
-        Body {
-            font-family: Calibri, Helvetica, sans-serif;
-            background-color: white;
-            color: #8C8C8C;
-            margin: auto;
-        }
-        .coverphoto {
-            
-            width:1519px;
-            height: 210px;
-            margin-left: 0px;
-            margin-top: 70px;
-            background: linear-gradient(270deg, #BA7777 0%, #DEAA76 102.33%);
-        }
-        .profilephoto {
-            
-            width: 135px;
-            height: 135px;
-            margin-left: 34px;
-            margin-top: 251px;
-            background: linear-gradient(224.89deg, #986581 3.15%, #5C729D 100%);
-        }
-    </style>
+    <link th:href="@{/css/clubProfilePageCSS.css}" rel="stylesheet" />
 </head>
 
 <body>
@@ -48,24 +24,24 @@
 
 <div th:replace="navbar/show :: navbar" ></div>
 
-<!--
+
 <div id="upcomingevents">
     <p class="eventstitle">Upcoming events:</p>
     <ul class="eventslist">
-        <li class="event1" th="event : ${futureEvents.[0]}">
+        <li class="event1" th:if="${!upcomingEvents.isEmpty()}">
             <a href=""><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${event.name}"></a>
-            <p class="eventdate" th:text="${event.date}"></p>
+            <a class="eventname" href="" th:text="${upcomingEvents.get(0).name}"></a>
+            <p class="eventdate" th:text="${upcomingEvents.get(0).location}"></p>
         </li>
-        <li class="event2" th="event : ${futureEvents.[1]}">
+        <li class="event2" th:if="${upcomingEvents.size() >= 2}">
             <a href=""><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${event.name}"></a>
-            <p class="eventdate" th:text="${event.date}"></p>
+            <a class="eventname" href="" th:text="${upcomingEvents.get(1).name}"></a>
+            <p class="eventdate" th:text="${upcomingEvents.get(1).location}"></p>
         </li>
-        <li class="event3" th="event : ${futureEvents.[2]}">
+        <li class="event3" th:if="${upcomingEvents.size() >= 3}">
             <a href=""><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${event.name}"></a>
-            <p class="eventdate" th:text="${event.date}"></p>
+            <a class="eventname" href="" th:text="${upcomingEvents.get(2).name}"></a>
+            <p class="eventdate" th:text="${upcomingEvents.get(2).location}"></p>
             <a class="more" href="">more</a>
         </li>
     </ul>
@@ -73,36 +49,35 @@
 <div id="pastevents">
     <p class="eventstitle">Past events:</p>
     <ul class="eventslist">
-        <li class="event1" th="event : ${pastEvents.[0]}">
+        <li class="event1" th:if="${upcomingEvents.size() >= 1}">
             <a href=""><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${event.name}"></a>
-            <p class="eventdate" th:text="${event.date}"></p>
+            <a class="eventname" href="" th:text="${pastEvents.get(0).name}"></a>
+            <p class="eventdate" th:text="${pastEvents.get(0).location}"></p>
         </li>
-        <li class="event2" th="event : ${pastEvents.[1]}">
+        <li class="event2" th:if="${upcomingEvents.size() >= 2}">
             <a href=""><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${event.name}"></a>
-            <p class="eventdate" th:text="${event.date}"></p>
+            <a class="eventname" href="" th:text="${pastEvents.get(1).name}"></a>
+            <p class="eventdate" th:text="${pastEvents.get(1).location}"></p>
         </li>
-        <li class="event3" th="event : ${pastEvents.[2]}">
+        <li class="event3" th:if="${upcomingEvents.size() >= 3}">
             <a href=""><img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="event photo"  style="width: 232px; height: 154px; object-fit: cover;" /></a>
-            <a class="eventname" href="" th:text="${event.name}"></a>
-            <p class="eventdate" th:text="${event.date}"></p>
+            <a class="eventname" href="" th:text="${pastEvents.get(2).name}"></a>
+            <p class="eventdate" th:text="${pastEvents.get(2).location}"></p>
             <a class="more" href="">more</a>
         </li>
     </ul>
 </div>
--->
 
-<!--<p class="activememberlisttitle">Active Members:</p>
+
+<p class="activememberlisttitle">Active Members:</p>
 <div class="maincontainer">
-    <ul id="activemembers" th:each="user : ${activeMembers}">
-        <li>
-            <a class="username" href="" th:text="${user.name}"></a>
-        </li>
-    </ul>
-</div>-->
+    <tr id="activemembers" th:each="user : ${activeMembers}">
+            <a class="username" th:href="@{/users/{id}(id=${user.getId() })}" th:text="${user.getUsername()}"></a>
+    </tr>
+</div>
 
-<!--<p class="requestlisttitle">Active Membership Requests:</p>
+<!--
+<p class="requestlisttitle">Active Membership Requests:</p>
 <div class="secondcontainer" th:each="user : ${activeMembershipRequests}">
     <ul id="requests">
         <li>
@@ -111,8 +86,8 @@
             <button class= "rejectbutton" type="submit">✖</button>
         </li>
     </ul>
-</div>-->
-
+</div>
+-->
 <button>
     <div class="pencil">
         <div class="triangle"></div>
