--- a/src/main/resources/static/css/clubProfilePageCSS.css
+++ b/src/main/resources/static/css/clubProfilePageCSS.css
@@ -170,151 +170,6 @@ button:hover {
     color: #5A5A5A;
 }
 
-/* NAVBAR -------------------------------------------------------*/
-.navigation {
-    width: 1519px;
-    height: 70px;
-    background: #45818F;
-}
-.brand {
-    position: absolute;
-    padding-left: 20px;
-    float: left;
-    line-height: 70px;
-    text-transform: uppercase;
-    font-size: 1.4em;
-}
-.brand a, .brand a:visited {
-    color: #fff;
-    text-decoration: none;
-}
-.nav-container {
-    width: 100%;
-    margin: 0 auto;
-}
-nav {
-    float: right;
-}
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-nav ul li {
-    float: left;
-    position: relative;
-}
-nav ul li a, nav ul li a:visited {
-    display: block;
-    padding: 0 20px;
-    line-height: 70px;
-    background: #45818F;
-    color: #fff;
-    text-decoration: none;
-}
-nav ul li a:hover, nav ul li a:visited:hover {
-    background: #3C6D79;
-    color: #fff;
-}
-nav ul li a:not(:only-child):after, nav ul li a:visited:not(:only-child):after {
-    padding-left: 4px;
-    content: " ▾";
-}
-nav ul li ul li {
-    min-width: 190px;
-}
-nav ul li ul li a {
-    padding: 15px;
-    line-height: 20px;
-}
-.nav-dropdown {
-    position: absolute;
-    display: none;
-    z-index: 1;
-    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
-}
-/* Mobile navigation */
-.nav-mobile {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: #2A4E56;
-    height: 70px;
-    width: 70px;
-}
-@media only screen and (max-width: 798px) {
-    .nav-mobile {
-        display: block;
-    }
-    nav {
-        width: 100%;
-        padding: 70px 0 15px;
-    }
-    nav ul {
-        display: none;
-    }
-    nav ul li {
-        float: none;
-    }
-    nav ul li a {
-        padding: 15px;
-        line-height: 20px;
-    }
-    nav ul li ul li a {
-        padding-left: 30px;
-    }
-    .nav-dropdown {
-        position: static;
-    }
-}
-@media screen and (min-width: 799px) {
-    .nav-list {
-        display: block !important;
-    }
-}
-#nav-toggle {
-    position: absolute;
-    margin-left: 18px;
-    top: 22px;
-    cursor: pointer;
-    padding: 10px 35px 16px 0;
-}
-#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
-    cursor: pointer;
-    border-radius: 1px;
-    height: 5px;
-    width: 35px;
-    background: #fff;
-    position: absolute;
-    display: block;
-    content: "";
-    transition: all 300ms ease-in-out;
-}
-#nav-toggle span:before {
-    top: -10px;
-}
-#nav-toggle span:after {
-    bottom: -10px;
-}
-#nav-toggle.active span {
-    background-color: transparent;
-}
-#nav-toggle.active span:before, #nav-toggle.active span:after {
-    top: 0;
-}
-#nav-toggle.active span:before {
-    transform: rotate(45deg);
-}
-#nav-toggle.active span:after {
-    transform: rotate(-45deg);
-}
-#signout {
-    background: #8F4545;
-}
-#signout:hover{
-    background: #833E3E;
-}
 /* Events -------------------------------------------------------*/
 .eventslist {
     list-style-type: none;
@@ -473,7 +328,7 @@ nav ul li ul li a {
     background: rgba(138, 138, 138, 0.7);
 }
 
-#activemembers li a{
+#activemembers a{
     text-decoration: none;
 
     font-family: Poly, sans-serif;
@@ -484,12 +339,6 @@ nav ul li ul li a {
     align-items: center;
 
     color: #5A5A5A;
-}
-
-#activemembers li{
-    padding-left: 0;
-    list-style-type: none;
-    margin-top: 19px;
 }
 
 #activemembers {
@@ -683,4 +532,27 @@ nav ul li ul li a {
     background-color: #3C3C3C;
     transform: rotate(48deg);
     border-radius: 10px;
+}
+
+Body {
+    font-family: Calibri, Helvetica, sans-serif;
+    background-color: white;
+    color: #8C8C8C;
+    margin: auto;
+}
+.coverphoto {
+
+    width:1519px;
+    height: 210px;
+    margin-left: 0px;
+    margin-top: 70px;
+    background: linear-gradient(270deg, #BA7777 0%, #DEAA76 102.33%);
+}
+.profilephoto {
+
+    width: 135px;
+    height: 135px;
+    margin-left: 34px;
+    margin-top: 251px;
+    background: linear-gradient(224.89deg, #986581 3.15%, #5C729D 100%);
 }
